--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root ngSkipHydration></app-root>
 </body>
 </html>
